Agregando formulario para dispositivos de entrada y estilos del mismo

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@ html body {
   margin: 0;
   background-color: gainsboro;
 }
+
+#form-dispositivo input {
+  display: block;
+  margin-bottom: 10px;
+  font-family: "Roboto";
+}
+
+#form-dispositivo button {
+  display: block;
+  margin-bottom: 10px;
+}
